--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,8 +9,8 @@
 <table class="table-hover">
     <thead>
     <tr>
-        <td>No.</td>
-        <td>Title</td>
+        <td>xin chào</td>
+        <td>Mọ người</td>
     </tr>
     </thead>
     <tbody>
