--- a/src/main/resources/templates/users/login.html
+++ b/src/main/resources/templates/users/login.html
@@ -283,9 +283,9 @@
         </div>
 
         <!-- Login Form -->
-        <form action="">
-            <input type="text" id="login" class="fadeIn second" name="login" placeholder="user name">
-            <input type="text" id="password" class="fadeIn third" name="login" placeholder="password">
+        <form action="/login" method="post">
+            <input type="text" id="login" class="fadeIn second" name="email" placeholder="user name">
+            <input type="text" id="password" class="fadeIn third" name="passwordHash" placeholder="password">
             <input type="submit" class="fadeIn fourth" value="Log In">
         </form>
 
